...
    }

    private func alertViews() -> Alert {
        if mainViewModel.userSettings.giphyAPIKey.isEmpty {
            return Alert(title: Text("API Key is missing"),
                         message: Text("Go to Settings to enter an API Key"),
                         dismissButton: .default(Text("OK ... I guess")))
        } else {
            return Alert(title: Text("Something went wrong!"),
                         message: Text(mainViewModel.errorString),
                         dismissButton: .default(Text("OK ... I guess")))
        }
    }

    private func loadEverything() {
...
